--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "name": "substrate-one-million-remarks",
+  "version": "0.0.1",
+  "description": "",
   "engines": {
     "node": "12.x"
   },
@@ -11,6 +11,8 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "@polkadot/api": "^0.90.0-beta.40",
+    "bitmap-manipulation": "^2.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
@@ -20,12 +22,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/shawntabrizi/substrate-one-million-remarks"
   },
   "keywords": [
-    "node",
-    "heroku",
-    "express"
+    "substrate",
+    "polkadot",
+    "kusama",
+    "blockchain"
   ],
   "license": "MIT"
 }
