--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@polkadot/api": "^0.90.0-beta.40",
-    "bitmap-manipulation": "^2.0.0",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "jimp": "^0.6.4"
   },
   "devDependencies": {
     "request": "^2.81.0",
