--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@polkadot/api": "^0.90.0-beta.66",
+    "bitmap-manipulation": "^2.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "jimp": "^0.6.4"
