--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "substrate-one-million-remarks",
   "version": "0.0.1",
   "description": "",
-  "engines": {
-    "node": "12.x"
-  },
+  "engines": {},
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "node test.js"
   },
   "dependencies": {
-    "@polkadot/api": "^0.97.1",
+    "@polkadot/api": "^0.98.1",
+    "@polkadot/wasm-crypto": "^0.14.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "jimp": "^0.9.3"
