--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "@polkadot/api": "^1.0.0-beta.13",
-    "@polkadot/wasm-crypto": "^0.14.1",
+    "@polkadot/api": "^1.8.1",
+    "@polkadot/wasm-crypto": "^1.2.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "jimp": "^0.9.3"
